Fixed menu z-index and document click event.

--- a/static/css/ffcstyle.less
+++ b/static/css/ffcstyle.less
@@ -175,7 +175,7 @@ body{
   width:800px;
   margin:0 auto;
   position: relative;
-  z-index: 100000;
+  z-index: 100;
   &:after{
     .after_close;
   };
