--- a/static/css/intro.less
+++ b/static/css/intro.less
@@ -40,7 +40,7 @@ li.bannerSupport {
 //  display: none;
   position: absolute;
   bottom: 40px;
-  z-index: 100;
+  z-index: 10;
   width: 100%;
   text-align: center;
 }
@@ -109,7 +109,7 @@ div.introPicture {
   text-indent: -99em;
   top: 40%;
   transition: opacity 0.3s ease-in-out 0s, left 0.3s ease-in-out 0s, right 0.3s ease-in-out 0s;
-  z-index: 10000;
+  z-index: 100;
 }
 
 .carousel .next {
